--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vanilla App Template</title>
-    <link rel="stylesheet" href="./css/1-gallery.css" />
   </head>
   <body>
-    <load src="./1-gallery.html" />
-
-    <script type="module" src="./js/1-gallery.js"></script>
+    <ul>
+      <li><a href="./1-gallery.html">Task 1</a></li>
+      <li><a href="./2-form.html">Task 2</a></li>
+    </ul>
   </body>
 </html>
