--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/1-gallery.css" />
   </head>
   <body>
-    <p><a href="./index.html">Go back</a></p>
+    <p><a class="goback-link" href="./index.html">Go back</a></p>
 
     <ul class="gallery"></ul>
 
