--- a/src/2-form.html
+++ b/src/2-form.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Task 1</title>
+    <title>Task 2</title>
     <link rel="stylesheet" href="./css/2-form.css" />
   </head>
   <body>
-    <p><a href="./index.html">Go back</a></p>
+    <p><a class="goback-link" href="./index.html">Go back</a></p>
 
     <form class="feedback-form" autocomplete="off">
-      <label>
+      <label class="email-label">
         Email
-        <input type="email" name="email" autofocus />
+        <input class="email-input" type="email" name="email" autofocus />
       </label>
-      <label>
+      <label class="message-label">
         Message
-        <textarea name="message" rows="8"></textarea>
+        <textarea class="message-textarea" name="message" rows="8"></textarea>
       </label>
-      <button type="submit">Submit</button>
+      <button class="submit-btn" type="submit">Submit</button>
     </form>
 
     <script type="module" src="./js/2-form.js"></script>
